# PinCode-EL-project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: initialize.py  main.py
app/config/: config.py  config_tmpl.json
app/internal/api/: router.py
app/internal/api/v1/: router.py
app/internal/api/v1/user/: profile.py  router.py
app/internal/core/: exception_handlers.py  exceptions.py
app/internal/db/: db.py
app/internal/db/data/: test_data.json
app/internal/dependencies/: db.py  user.py
app/internal/models/: __init__.py  user.py
app/internal/repositories/db/: base.py  db.py  helpers.py  user.py
app/internal/repositories/db/data/: test_data.json
app/internal/routers/: router.py  status.py
app/internal/routers/user/: profile.py  router.py
app/internal/schemas/: __init__.py  user.py
app/internal/services/: user.py
app/routers/: router.py
app/routers/user/: profile.py  router.py
app/routers/user/profile/: profile.py  router.py
app/routers/user/schemas/response/: get.py
app/tests/: __init__.py  profile_test.py  status_test.py
docs/: local.md  migrations.md
src/: initialize.py
src/api/: profile.py  routers.py
src/config/: config.env.tmpl  settings.py
src/db/: helpers.py
src/dependencies/: user.py
src/migrations/: env.py
src/models/: user.py
src/repositories/: base.py  user.py
src/schemas/: __init__.py  user.py
src/schemas/response/: __init__.py  user.py
src/services/: user.py
src/tests/: __init__.py  profile_test.py
src/utils/: exception_handlers.py
(+15 files in other folders)
