[tool.poetry]
name = "pincode-el"
version = "0.1.0"
description = ""
authors = ["imMonkaS <danchik646@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
fastapi = {extras = ["standard"], version = "^0.112.0"}
pytest = "^8.3.2"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "app"
